# salud_prenatal_backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  RESUMEN_ADR.md  device_tokens_migration.sql  docker-compose.staging.yml  docker-compose.vps.yml  docker-compose.yml  main.py  pytest.ini  requirements.txt  traefik-dynamic.yml
docs/: .olauth  adr.md  arquitectura-microservicios.md  autoria_forums_jwt.md  cambios-para-frontend.md  chat_mensajes_leidos_frontend.md  cors-fix-seguridad.md  deploy-produccion-traefik-vault.md  docker_doc.md  doctor_endpoints_frontend.md  integracion_frontend_oxxo_spei.md  integracion_frontend_suscripciones.md  project_requirements.md  publicidad_doctores.md  recomendaciones_por_cluster.md  social_profile_endpoints_frontend.md  split_servicios_cierre.md  split_servicios_resumen.md  suscripciones_doctores_stripe.md  traceability_matrix.md
scripts/: alter_columns.py  migrate_encryption.py  vault_bootstrap.py  vault_recover.sh
service_auth/: Dockerfile  README.md  container.py  main.py  requirements.txt
service_gateway/: Dockerfile  main.py  (+1 more)
shared_core/: README.md  pyproject.toml
shared_core/salud_prenatal_shared_core/: __init__.py  auth_dependencies.py  cors.py  database.py  db_cleanup.py  enums.py  jwt_key_provider.py  pregnancy_calculations.py  security.py  security_headers.py  text.py  vault_jwt_key_provider.py
shared_core/salud_prenatal_shared_core/crypto/: crypto_pipes.py  key_manager.py
shared_core/salud_prenatal_shared_core/events/: __init__.py  domain_event.py  event_dispatcher.py
(+667 files in other folders)
